--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <button class="item__button">Eyða</button>
         </li>
         <li class="item">
-          <input id="box" type="checkbox" class="item__checkbox">
+          <input type="checkbox" class="item__checkbox">
           <span class="item__text">Klára verkefni</span>
           <button class="item__button">Eyða</button>
         </li>
